--- a/services/prediction/pyproject.toml
+++ b/services/prediction/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "joblib>=1.5.2",
     "numpy>=2.3.5",
     "pandas>=2.3.3",
+    "requests>=2.32.5",
     "scikit-learn>=1.7.2",
     "uvicorn>=0.38.0",
     "xgboost>=3.1.2",
