--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pandas>=2.3.3",
     "plotly>=6.5.0",
     "pydeck>=0.9.1",
+    "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "streamlit>=1.52.0",
 ]
@@ -16,4 +17,5 @@ dependencies = [
 [tool.uv.workspace]
 members = [
     "services/training",
+    "services/frontend",
 ]
