--- a/services/training/pyproject.toml
+++ b/services/training/pyproject.toml
@@ -5,4 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 
-dependencies = []
+dependencies = [
+    "python-dotenv>=1.2.1",
+]
